[package]
name = "gg_mhtml_to_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
lol_html = "=2.0.0"
memmem = "0.1.1"
quoted_printable = "0.5.1"
regex = "1.11.0"
scraper = "0.20.0"
image = "0.25.6"
htmlize = { version = "1.0.6", features = ["unescape"] }
unicode-truncate = "2.0.0"
serde = "1.0.219"
serde_json = "1.0.142"
serde_derive = "1.0.219"
